--- a/src/_vars.scss
+++ b/src/_vars.scss
@@ -1,6 +1,6 @@
 //* Main Colors
 $logo-color : #4a76f0;
-$primary-accent-color : #89a2f7;
+$primary-accent-color : #97adf3;
 
 
 //* light theme colors
@@ -35,7 +35,7 @@ $xSmallScreen : 560px;
 
 //* Sizes
 $headerHeight : 70px;
-$sidebarWidth : 250px;
+$sidebarWidth : 260px;
 
 
 
