--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -5,7 +5,8 @@
     display: flex;
     flex-direction: column;
     background-color: var(--header-color);
-    height: 100vh;
+    // height: 100vh;
+    height: calc(100vh - 70px);
 
     .tab {
         display: flex;
@@ -14,7 +15,6 @@
         width: 100%;
         margin-top: 30px;
         padding: 10px 0 10px 50px;
-        // border-radius: 0 30px 30px 0;
         transition: all 0.2s ease-out;
         cursor: pointer;
 
@@ -24,7 +24,6 @@
 
         h4 {
             pointer-events: none;
-            letter-spacing: 1px;
             text-transform: uppercase;
         }
 
