--- a/src/components/Switcher/Switcher.scss
+++ b/src/components/Switcher/Switcher.scss
@@ -7,26 +7,35 @@
     justify-content: center;
 
     .switch-container{
-        padding: 3px;
-        width : 55px;
-        height : 30px;
-        border : 3px solid var(--text-color);
+        width : 40px;
+        height : 16px;
+        background-color: rgba(85, 85, 85, 0.63);
         border-radius: 50px;
         position: relative;
         cursor: pointer;
-        margin: 0 10px;
+        margin: 0 20px;
+        transition : all 0.2s ease-out;
+
         .toggler{
             transition : all 0.2s ease-out;
-            width : 18px;
-            height : 18px;
+            width : 24px;
+            height : 24px;
             border-radius: 50%;
             background : #000;
-
+            position: absolute;
+            top: -4px;
+            left: -8px;
+            background-color: #000;
         }
         .toggler-right{
-            transform : translateX(25px);
+            transform : translateX(32px);
             background : $primary-accent-color;
       
+        }
+
+        &.disable{
+            pointer-events: none;
+            opacity: 0.4;
         }
     }
 }
